# resqd

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TEST_RESULTS.md  VERIMUS_VS_RESQD.md
.github/workflows/: cloudflare-ips-refresh.yml
.next/: trace  trace-build
api/: Cargo.toml
api/.next/: trace  trace-build
api/src/: admin.rs  auth.rs  handlers.rs  lib.rs  rings.rs  state.rs  stream.rs
api/tests/: roundtrip.rs
chain/: Cargo.toml
chain/src/: error.rs  lib.rs
chain/tests/: anvil_roundtrip.rs  sepolia_live.rs
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ResqdCanaryAnchor.sol
contracts/test/: ResqdCanaryAnchor.t.sol
contrib/: adaptive_bandwidth.py
core/: Cargo.toml  build-wasm.sh
core/src/: error.rs  lib.rs  wasm.rs
core/src/canary/: mod.rs
core/src/crypto/: encrypt.rs  hash.rs  kem.rs  keys.rs  mod.rs  share.rs  stream.rs
core/src/erasure/: mod.rs  stream.rs
docs/: BILLING.md  JURISDICTION.md  LIVE-12-advisory.md  LIVE-12-disclosure-email.md  LIVE-12-runbook.md  RECOVERY_KIT_SPEC.md  test-plan.md
infra/: wif-aws-cred.json
infra/lambda/: README.md  deploy.sh  permissions-policy.json  smoke-test.sh
infra/worker/: wrangler.toml
infra/worker/src/: index.ts
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
recover/: Cargo.toml
recover/examples/: build_smoke_kit.rs
recover/src/: main.rs
site/: _headers  index.html  robots.txt
site/alpha/: index.html  podcast-script.md
site/alpha/docs/: architecture.md  beta-strategy.md  platform-strategy.md
site/functions/api/: waitlist.js
storage/: Cargo.toml
storage/src/: error.rs  gcs.rs  lib.rs  mem.rs  object_store.rs  prefixed.rs  s3.rs  vault.rs
storage/tests/: multicloud_roundtrip.rs
tests/e2e/: .gitignore  README.md  absorption_negative.mjs  package-lock.json  package.json  passphrase_roundtrip.mjs  streaming_roundtrip.mjs
web/: lights-dashboard.html  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/admin/: page.tsx
web/app/billing/: page.tsx
web/app/fetch/: page.tsx
web/app/how-it-works/: page.tsx
web/app/jurisdiction/: page.tsx
web/app/lib/: adaptiveBandwidth.ts  passkey.ts  recovery.ts  recoveryKit.ts  resqdCrypto.ts  streamingUploader.ts
web/app/login/: page.tsx
web/app/mcp/: page.tsx
web/app/privacy/: page.tsx
web/app/rings/: page.tsx
web/app/security-model/: page.tsx
web/app/settings/: page.tsx
web/app/signup/: page.tsx
web/app/terms/: page.tsx
web/app/upload/: page.tsx
web/app/vault/: page.tsx
web/app/why/: page.tsx
web/public/: _headers
web/public/resqd-wasm/: package.json  resqd_core.d.ts  resqd_core.js  resqd_core_bg.wasm  resqd_core_bg.wasm.d.ts
