[package]
name = "resqd-api"
version = "0.1.0"
edition = "2024"
description = "HTTP API for the RESQD vault (AWS Lambda / local HTTP server)"
license = "AGPL-3.0"

[[bin]]
name = "resqd-api-lambda"
path = "src/bin/lambda.rs"

[[bin]]
name = "resqd-api-local"
path = "src/bin/local.rs"

[dependencies]
# RESQD crates
resqd-core = { path = "../core" }
resqd-storage = { path = "../storage" }
resqd-chain = { path = "../chain" }

# HTTP / Lambda
lambda_http = "1"
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# AWS SDK (for bootstrapping S3/KMS)
aws-config = "1"
aws-sdk-dynamodb = "1"

# Auth: passkey / WebAuthn, session JWT, cookies
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9"
tower-cookies = "0.11"
base64 = "0.22"
rand = "0.8"
url = "2"
# `webauthn-rs` pulls openssl via openssl-sys. When cross-compiling for
# `aarch64-unknown-linux-gnu` on macOS there's no system openssl available,
# so we vendor and build it from source. Compile time hit is small vs.
# the alternative of managing a sysroot.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
async-trait = "0.1"
