[package]
name = "resqd-chain"
version = "0.1.0"
edition = "2024"
description = "On-chain canary commitment anchoring for RESQD (Base L2)"
license = "AGPL-3.0"

[dependencies]
# Core canary types
resqd-core = { path = "../core" }

# Ethereum / Base L2 client
alloy = { version = "1.0", features = [
    "full",
    "provider-anvil-node",
    "rpc-types-eth",
    "signer-local",
    "sol-types",
    "contract",
    "network",
] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = "0.3"
serde_json = "1"
