[package]
name = "resqd-core"
version = "0.1.0"
edition = "2024"
description = "Quantum-hardened cryptographic core for RESQD digital vault"
license = "AGPL-3.0"

[dependencies]
# Hashing — BLAKE3 (patent-distinct from SHA-256)
blake3 = "1"

# AEAD encryption — XChaCha20-Poly1305 (patent-distinct from AES-256-CBC)
chacha20poly1305 = "0.10"

# Post-quantum key encapsulation — ML-KEM-768 (patent-distinct from RSA)
ml-kem = { version = "0.2", features = ["std"] }
hybrid-array = "0.2"

# Classical ECDH for user-to-user asset sharing. X25519 is paired with
# ML-KEM inside the existing hybrid KEM when we ship per-asset PQ keys;
# for now it's used directly to derive per-recipient share wrap keys in
# the read-only sharing flow and to give each user a stable long-term
# public identity (stored on the server, sealed privkey under master).
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }

# HKDF-SHA256 for deriving share wrap keys from X25519 shared secrets.
# We deliberately use SHA-256 here rather than BLAKE3 because HKDF-SHA256
# is the de-facto interoperable choice for cross-implementation share
# formats — the resqd-recover CLI and any future third-party readers can
# implement it from any standard crypto library.
hkdf = "0.12"
sha2 = "0.10"

# Post-quantum signatures — ML-DSA-65
# ml-dsa not yet stable — add when 0.1.0 releases
# ml-dsa = { version = "0.1.0-rc.8", features = ["std"] }

# Key derivation
argon2 = "0.5"

# Erasure coding — Reed-Solomon
reed-solomon-erasure = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation
rand = "0.9"

# Hex encoding for display
hex = "0.4"

# Timestamps — `wasmbind` bridges `Utc::now()` to `Date.now()` on wasm32
# targets. Without it chrono emits an unresolved `env.now` import that
# breaks the WASM module in browsers.
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
thiserror = "2"

# WASM bindings (optional, enabled for browser builds)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "getrandom_02/js", "getrandom/wasm_js"]

# Need both getrandom versions with JS support for WASM
[dependencies.getrandom_02]
version = "0.2"
optional = true
package = "getrandom"

[dependencies.getrandom]
version = "0.3"
optional = true

[dependencies.base64ct]
version = "1"
features = ["alloc"]

[dev-dependencies]
# For test assertions
assert_matches = "1.5"

[lib]
crate-type = ["cdylib", "rlib"]
