[package]
name = "resqd-storage"
version = "0.1.0"
edition = "2024"
description = "Multi-cloud object storage with Reed-Solomon erasure coding for RESQD"
license = "AGPL-3.0"

[dependencies]
resqd-core = { path = "../core" }

async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
futures = "0.3"
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS S3
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# GCS — direct JSON API via reqwest. We get the bearer token by shelling out
# to `gcloud auth print-access-token`, which natively handles WIF/external_account
# (the Rust auth crates don't, as of 2026-04).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9"
chrono = "0.4"
